修复 ph08 六门语言场景 D 深检发现的问题（P1→P2→P3）
P1 硬伤：
- go: ex05 benchmark 改 strconv 实测快约 2 倍并更新文档数据；sol-01 删 main 使覆盖率实测 100%
- py: ex04 元组返回误植改 HTTPException（TestClient 实测 404）；project 测试计数 4→5
- rs: 返回局部值引用错误码 5 处 E0597→E0106/E0515、assert_static E0310→E0597（rustc 1.92 实测）
- cpp: GCC 协程版本（GCC 10 需 flag / 11 起默认）

P2 断言精度：c 的 SIGSEGV/pthread 年份/UDP 短读/ulimit/epoll 口径；java 的 limit 缓冲/reduce 注释/case null 版本（JEP 406/441）/instanceof 16+；py 的 httpx[http2]/基线归因/sol-03 index=False；go 版本表年份

P3 可复现性/一致性：c sol 文件头验证块/ex05 内嵌片段对齐/sol-04 Content-Length/ex03 malloc 判空；cpp 表格转义；java POJO 教学简化注释；rs 片段同步

终验：修复落位逐项核对、六语言受影响代码全部复验通过、8 个 md 格式脚本复查通过；sol-03 产物 input.csv 与 .pytest_cache 清理并入 gitignore